--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="nav">
           <a class="nav-logo" href="./index.html">Web<span>Studio</span></a>
           <ul class="nav-list">
-            <li class="nav-item">
+            <li class="nav-item current">
               <a class="nav-link" href="./index.html">Studio</a>
             </li>
             <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
@@ -63,6 +63,11 @@
         <h2 class="visually-hidden">Headline</h2>
         <ul class="headline-list">
           <li class="headline-item">
+            <div class="icon-item">
+              <svg class="icon-item-content" width="64" height="64">
+                <use href="./images/icons.svg#icon-antenna"></use>
+              </svg>
+            </div>
             <h3 class="headline-subtitle">Strategy</h3>
             <p class="headline-item-text">
               Our goal is to identify the business problem to walk away with the
@@ -70,6 +75,11 @@
             </p>
           </li>
           <li class="headline-item">
+            <div class="icon-item">
+              <svg class="icon-item-content" width="64" height="64">
+                <use href="./images/icons.svg#icon-clock"></use>
+              </svg>
+            </div>
             <h3 class="headline-subtitle">Punctuality</h3>
             <p class="headline-item-text">
               Bring the key message to the brand's audience for the best price
@@ -77,6 +87,11 @@
             </p>
           </li>
           <li class="headline-item">
+            <div class="icon-item">
+              <svg class="icon-item-content" width="64" height="64">
+                <use href="./images/icons.svg#icon-diagram"></use>
+              </svg>
+            </div>
             <h3 class="headline-subtitle">Diligence</h3>
             <p class="headline-item-text">
               Research and confirm brands that present the strongest digital
@@ -84,6 +99,11 @@
             </p>
           </li>
           <li class="headline-item">
+            <div class="icon-item">
+              <svg class="icon-item-content" width="64" height="64">
+                <use href="./images/icons.svg#icon-astronaut"></use>
+              </svg>
+            </div>
             <h3 class="headline-subtitle">Technologies</h3>
             <p class="headline-item-text">
               Design practice focused on digital experiences. We bring forth a
@@ -108,6 +128,29 @@
             <div class="ourteam-text-cont">
             <h3 class="ourteam-subtitle">Mark Guerrero</h3>
             <p class="ourteam-item-text">Product Designer</p>
+            <ul class="icon">
+              <li class="team-contact">
+                <a class="team-icon-link" href="">
+                  <svg class="team-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="team-contact">
+                <a class="team-icon-link" href="">
+                  <svg class="team-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="team-contact">
+                <a class="team-icon-link" href="">
+                  <svg class="team-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
             </div>
           </li>
           <li class="ourteam-item">
@@ -121,6 +164,29 @@
             <div class="ourteam-text-cont">
             <h3 class="ourteam-subtitle">Tom Ford</h3>
             <p class="ourteam-item-text">Frontend Developer</p>
+            <ul class="icon">
+              <li class="team-contact">
+                <a class="team-icon-link" href="">
+                  <svg class="team-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="team-contact">
+                <a class="team-icon-link" href="">
+                  <svg class="team-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="team-contact">
+                <a class="team-icon-link" href="">
+                  <svg class="team-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </div>
           </li>
           <li class="ourteam-item">
@@ -134,6 +200,29 @@
             <div class="ourteam-text-cont">
             <h3 class="ourteam-subtitle">Camila Garcia</h3>
             <p class="ourteam-item-text">Marketing</p>
+            <ul class="icon">
+              <li class="team-contact">
+                <a class="team-icon-link" href="">
+                  <svg class="team-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="team-contact">
+                <a class="team-icon-link" href="">
+                  <svg class="team-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="team-contact">
+                <a class="team-icon-link" href="">
+                  <svg class="team-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </div>
           </li>
           <li class="ourteam-item">
@@ -147,6 +236,29 @@
             <div class="ourteam-text-cont">
             <h3 class="ourteam-subtitle">Daniel Wilson</h3>
             <p class="ourteam-item-text">UI Designer</p>
+            <ul class="icon">
+              <li class="team-contact">
+                <a class="team-icon-link" href="">
+                  <svg class="team-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="team-contact">
+                <a class="team-icon-link" href="">
+                  <svg class="team-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="team-contact">
+                <a class="team-icon-link" href="">
+                  <svg class="team-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </div>
           </li>
         </ul>
@@ -240,6 +352,7 @@
     </main>
     <footer class="footer">
      <div class="container cont-footer">
+      <div class="cont-footer-text">
       <a class="footer-logo" href="./index.html"
         >Web<span class="foo-logo">Studio</span></a
       >
@@ -248,6 +361,41 @@
         marketing & growth solutions.
       </p>
     </div>
+    
+    <div class="footer-cont-icon">
+      <p class="social-media">Social media</p>
+      <ul class="footer-icon-list">
+        <li class="footer-icon-item">
+          <a class="team-icon-link footer-icon-link" href="">
+            <svg class="team-icon" width="16" height="16">
+              <use href="./images/icons.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer-icon-item">
+          <a class="team-icon-link footer-icon-link" href="">
+            <svg class="team-icon" width="16" height="16">
+              <use href="./images/icons.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer-icon-item">
+          <a class="team-icon-link footer-icon-link" href="">
+            <svg class="team-icon" width="16" height="16">
+              <use href="./images/icons.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer-icon-item">
+          <a class="team-icon-link footer-icon-link" href="">
+            <svg class="team-icon" width="16" height="16">
+              <use href="./images/icons.svg#icon-linkedin"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
     </footer>
   </body>
 </html>
