--- a/index.html
+++ b/index.html
@@ -289,6 +289,7 @@
               </div>
             </li>
             <li class="ourportfolio-item">
+              <div class="ourportfolio-item-cont">
               <img
                 class="ourportfolio-img"
                 src="./images/img6.jpg"
@@ -300,6 +301,7 @@
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App
               </p>
+            </div>
               <div class="ourportfolio-cont-two">
                 <h3 class="ourportfolio-subtitle">Cashless Payment</h3>
                 <p class="ourportfolio-item-text">Marketing</p>
@@ -307,6 +309,7 @@
             </li>
 
             <li class="ourportfolio-item">
+              <div class="ourportfolio-item-cont">
               <img
                 class="ourportfolio-img"
                 src="./images/img7.jpg"
@@ -318,12 +321,14 @@
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App
               </p>
+            </div>
               <div class="ourportfolio-cont-two">
                 <h3 class="ourportfolio-subtitle">Meditation App</h3>
                 <p class="ourportfolio-item-text">App</p>
               </div>
             </li>
             <li class="ourportfolio-item">
+              <div class="ourportfolio-item-cont">
               <img
                 class="ourportfolio-img"
                 src="./images/img8.jpg"
@@ -335,12 +340,14 @@
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App
               </p>
+            </div>
               <div class="ourportfolio-cont-two">
                 <h3 class="ourportfolio-subtitle">Taxi Service</h3>
                 <p class="ourportfolio-item-text">Marketing</p>
               </div>
             </li>
             <li class="ourportfolio-item">
+              <div class="ourportfolio-item-cont">
               <img
                 class="ourportfolio-img"
                 src="./images/img9.jpg"
@@ -352,12 +359,14 @@
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App
               </p>
+            </div>
               <div class="ourportfolio-cont-two">
                 <h3 class="ourportfolio-subtitle">Screen Illustrations</h3>
                 <p class="ourportfolio-item-text">Design</p>
               </div>
             </li>
             <li class="ourportfolio-item">
+              <div class="ourportfolio-item-cont">
               <img
                 class="ourportfolio-img"
                 src="./images/img10.jpg"
@@ -369,6 +378,7 @@
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App
               </p>
+            </div>
               <div class="ourportfolio-cont-two">
                 <h3 class="ourportfolio-subtitle">Online Courses</h3>
                 <p class="ourportfolio-item-text">Marketing</p>
