--- a/index.html
+++ b/index.html
@@ -299,7 +299,8 @@
               />
               <p class="ourportfolio-item-dropdown">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
               </p>
             </div>
               <div class="ourportfolio-cont-two">
@@ -319,7 +320,8 @@
               />
               <p class="ourportfolio-item-dropdown">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
               </p>
             </div>
               <div class="ourportfolio-cont-two">
@@ -338,7 +340,8 @@
               />
               <p class="ourportfolio-item-dropdown">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
               </p>
             </div>
               <div class="ourportfolio-cont-two">
@@ -357,7 +360,8 @@
               />
               <p class="ourportfolio-item-dropdown">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
               </p>
             </div>
               <div class="ourportfolio-cont-two">
@@ -376,9 +380,10 @@
               />
               <p class="ourportfolio-item-dropdown">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
               </p>
-            </div>
+              </div>
               <div class="ourportfolio-cont-two">
                 <h3 class="ourportfolio-subtitle">Online Courses</h3>
                 <p class="ourportfolio-item-text">Marketing</p>
