--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
     </header>
     <main class="main">
-      <section class="main-sect">
+      <section class="main-sect main-wrap">
         <div class="container main-text-cont">
           <h1 class="main-text">Effective Solutions for Your Business</h1>
           <button class="main-button" type="button">Order Service</button>
@@ -268,7 +268,7 @@
         <div class="container ourportfolio-cont">
           <h2 class="ourportfolio-title">Our Portfolio</h2>
           <ul class="ourportfolio-list">
-            <li class="ourportfolio-item">
+            <li class="ourportfolio-item ourportfolio-shadow">
               <div class="ourportfolio-item-cont">
               <img
                 class="ourportfolio-img"
