--- a/index.html
+++ b/index.html
@@ -150,6 +150,13 @@
                       </svg>
                     </a>
                   </li>
+                  <li class="team-contact">
+                    <a class="team-icon-link" href="">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
                 </ul>
               </div>
             </li>
@@ -183,6 +190,13 @@
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-contact">
+                    <a class="team-icon-link" href="">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -222,6 +236,13 @@
                       </svg>
                     </a>
                   </li>
+                  <li class="team-contact">
+                    <a class="team-icon-link" href="">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
                 </ul>
               </div>
             </li>
@@ -255,6 +276,13 @@
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-contact">
+                    <a class="team-icon-link" href="">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
