--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <a class="nav-logo" href="./index.html">Web<span>Studio</span></a>
           <ul class="nav-list">
             <li class="nav-item">
-              <a class="nav-link  current" href="./index.html">Studio</a>
+              <a class="nav-link current studio-color" href="./index.html">Studio</a>
             </li>
             <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
             <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
