--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                 <p class="ourportfolio-item-text">App</p>
               </div>
             </li>
-            <li class="ourportfolio-item">
+            <li class="ourportfolio-item ourportfolio-shadow">
               <div class="ourportfolio-item-cont">
               <img
                 class="ourportfolio-img"
@@ -337,7 +337,7 @@
               </div>
             </li>
 
-            <li class="ourportfolio-item">
+            <li class="ourportfolio-item ourportfolio-shadow">
               <div class="ourportfolio-item-cont">
               <img
                 class="ourportfolio-img"
@@ -357,7 +357,7 @@
                 <p class="ourportfolio-item-text">App</p>
               </div>
             </li>
-            <li class="ourportfolio-item">
+            <li class="ourportfolio-item ourportfolio-shadow">
               <div class="ourportfolio-item-cont">
               <img
                 class="ourportfolio-img"
@@ -377,7 +377,7 @@
                 <p class="ourportfolio-item-text">Marketing</p>
               </div>
             </li>
-            <li class="ourportfolio-item">
+            <li class="ourportfolio-item ourportfolio-shadow">
               <div class="ourportfolio-item-cont">
               <img
                 class="ourportfolio-img"
@@ -397,7 +397,7 @@
                 <p class="ourportfolio-item-text">Design</p>
               </div>
             </li>
-            <li class="ourportfolio-item">
+            <li class="ourportfolio-item ourportfolio-shadow">
               <div class="ourportfolio-item-cont">
               <img
                 class="ourportfolio-img"
